pkgs/cupertino_http/lib/src/cronet.dart


  /// ////////////////////
  /// Struct Cronet_PublicKeyPins.
  Cronet_PublicKeyPinsPtr Cronet_PublicKeyPins_Create() {
    return _Cronet_PublicKeyPins_Create();
  }

  late final _Cronet_PublicKeyPins_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_PublicKeyPinsPtr Function()>>(
          'Cronet_PublicKeyPins_Create');
  late final _Cronet_PublicKeyPins_Create = _Cronet_PublicKeyPins_CreatePtr
      .asFunction<Cronet_PublicKeyPinsPtr Function()>();

  void Cronet_PublicKeyPins_Destroy(
    Cronet_PublicKeyPinsPtr self,
  ) {
    return _Cronet_PublicKeyPins_Destroy(
      self,
    );
  }

  late final _Cronet_PublicKeyPins_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_PublicKeyPinsPtr)>>(
          'Cronet_PublicKeyPins_Destroy');
  late final _Cronet_PublicKeyPins_Destroy = _Cronet_PublicKeyPins_DestroyPtr
      .asFunction<void Function(Cronet_PublicKeyPinsPtr)>();

  /// Cronet_PublicKeyPins setters.
  void Cronet_PublicKeyPins_host_set(
    Cronet_PublicKeyPinsPtr self,
    Cronet_String host,
  ) {
    return _Cronet_PublicKeyPins_host_set(
      self,
      host,
    );
  }

  late final _Cronet_PublicKeyPins_host_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_PublicKeyPinsPtr,
              Cronet_String)>>('Cronet_PublicKeyPins_host_set');
  late final _Cronet_PublicKeyPins_host_set = _Cronet_PublicKeyPins_host_setPtr
      .asFunction<void Function(Cronet_PublicKeyPinsPtr, Cronet_String)>();

  void Cronet_PublicKeyPins_pins_sha256_add(
    Cronet_PublicKeyPinsPtr self,
    Cronet_String element,
  ) {
    return _Cronet_PublicKeyPins_pins_sha256_add(
      self,
      element,
    );
  }

  late final _Cronet_PublicKeyPins_pins_sha256_addPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_PublicKeyPinsPtr,
              Cronet_String)>>('Cronet_PublicKeyPins_pins_sha256_add');
  late final _Cronet_PublicKeyPins_pins_sha256_add =
      _Cronet_PublicKeyPins_pins_sha256_addPtr.asFunction<
          void Function(Cronet_PublicKeyPinsPtr, Cronet_String)>();

  void Cronet_PublicKeyPins_include_subdomains_set(
    Cronet_PublicKeyPinsPtr self,
    bool include_subdomains,
  ) {
    return _Cronet_PublicKeyPins_include_subdomains_set(
      self,
      include_subdomains,
    );
  }

  late final _Cronet_PublicKeyPins_include_subdomains_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_PublicKeyPinsPtr,
              ffi.Bool)>>('Cronet_PublicKeyPins_include_subdomains_set');
  late final _Cronet_PublicKeyPins_include_subdomains_set =
      _Cronet_PublicKeyPins_include_subdomains_setPtr.asFunction<
          void Function(Cronet_PublicKeyPinsPtr, bool)>();

  void Cronet_PublicKeyPins_expiration_date_set(
    Cronet_PublicKeyPinsPtr self,
    int expiration_date,
  ) {
    return _Cronet_PublicKeyPins_expiration_date_set(
      self,
      expiration_date,
    );
  }

  late final _Cronet_PublicKeyPins_expiration_date_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_PublicKeyPinsPtr,
              ffi.Int64)>>('Cronet_PublicKeyPins_expiration_date_set');
  late final _Cronet_PublicKeyPins_expiration_date_set =
      _Cronet_PublicKeyPins_expiration_date_setPtr.asFunction<
          void Function(Cronet_PublicKeyPinsPtr, int)>();

  /// Cronet_PublicKeyPins getters.
  Cronet_String Cronet_PublicKeyPins_host_get(
    Cronet_PublicKeyPinsPtr self,
  ) {
    return _Cronet_PublicKeyPins_host_get(
      self,
    );
  }

  late final _Cronet_PublicKeyPins_host_getPtr = _lookup<
          ffi.NativeFunction<Cronet_String Function(Cronet_PublicKeyPinsPtr)>>(
      'Cronet_PublicKeyPins_host_get');
  late final _Cronet_PublicKeyPins_host_get = _Cronet_PublicKeyPins_host_getPtr
      .asFunction<Cronet_String Function(Cronet_PublicKeyPinsPtr)>();

  int Cronet_PublicKeyPins_pins_sha256_size(
    Cronet_PublicKeyPinsPtr self,
  ) {
    return _Cronet_PublicKeyPins_pins_sha256_size(
      self,
    );
  }

  late final _Cronet_PublicKeyPins_pins_sha256_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function(Cronet_PublicKeyPinsPtr)>>(
          'Cronet_PublicKeyPins_pins_sha256_size');
  late final _Cronet_PublicKeyPins_pins_sha256_size =
      _Cronet_PublicKeyPins_pins_sha256_sizePtr.asFunction<
          int Function(Cronet_PublicKeyPinsPtr)>();

  Cronet_String Cronet_PublicKeyPins_pins_sha256_at(
    Cronet_PublicKeyPinsPtr self,
    int index,
  ) {
    return _Cronet_PublicKeyPins_pins_sha256_at(
      self,
      index,
    );
  }

  late final _Cronet_PublicKeyPins_pins_sha256_atPtr = _lookup<
      ffi.NativeFunction<
          Cronet_String Function(Cronet_PublicKeyPinsPtr,
              ffi.Uint32)>>('Cronet_PublicKeyPins_pins_sha256_at');
  late final _Cronet_PublicKeyPins_pins_sha256_at =
      _Cronet_PublicKeyPins_pins_sha256_atPtr.asFunction<
          Cronet_String Function(Cronet_PublicKeyPinsPtr, int)>();

  void Cronet_PublicKeyPins_pins_sha256_clear(
    Cronet_PublicKeyPinsPtr self,
  ) {
    return _Cronet_PublicKeyPins_pins_sha256_clear(
      self,
    );
  }

  late final _Cronet_PublicKeyPins_pins_sha256_clearPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_PublicKeyPinsPtr)>>(
          'Cronet_PublicKeyPins_pins_sha256_clear');
  late final _Cronet_PublicKeyPins_pins_sha256_clear =
      _Cronet_PublicKeyPins_pins_sha256_clearPtr.asFunction<
          void Function(Cronet_PublicKeyPinsPtr)>();

  bool Cronet_PublicKeyPins_include_subdomains_get(
    Cronet_PublicKeyPinsPtr self,
  ) {
    return _Cronet_PublicKeyPins_include_subdomains_get(
      self,
    );
  }

  late final _Cronet_PublicKeyPins_include_subdomains_getPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(Cronet_PublicKeyPinsPtr)>>(
          'Cronet_PublicKeyPins_include_subdomains_get');
  late final _Cronet_PublicKeyPins_include_subdomains_get =
      _Cronet_PublicKeyPins_include_subdomains_getPtr.asFunction<
          bool Function(Cronet_PublicKeyPinsPtr)>();

  int Cronet_PublicKeyPins_expiration_date_get(
    Cronet_PublicKeyPinsPtr self,
  ) {
    return _Cronet_PublicKeyPins_expiration_date_get(
      self,
    );
  }

  late final _Cronet_PublicKeyPins_expiration_date_getPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(Cronet_PublicKeyPinsPtr)>>(
          'Cronet_PublicKeyPins_expiration_date_get');
  late final _Cronet_PublicKeyPins_expiration_date_get =
      _Cronet_PublicKeyPins_expiration_date_getPtr.asFunction<
          int Function(Cronet_PublicKeyPinsPtr)>();

  /// ////////////////////
  /// Struct Cronet_EngineParams.
  Cronet_EngineParamsPtr Cronet_EngineParams_Create() {
    return _Cronet_EngineParams_Create();
  }

  late final _Cronet_EngineParams_CreatePtr =
      _lookup<ffi.NativeFunction<Cronet_EngineParamsPtr Function()>>(
          'Cronet_EngineParams_Create');
  late final _Cronet_EngineParams_Create = _Cronet_EngineParams_CreatePtr
      .asFunction<Cronet_EngineParamsPtr Function()>();

  void Cronet_EngineParams_Destroy(
    Cronet_EngineParamsPtr self,
  ) {
    return _Cronet_EngineParams_Destroy(
      self,
    );
  }

  late final _Cronet_EngineParams_DestroyPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(Cronet_EngineParamsPtr)>>(
          'Cronet_EngineParams_Destroy');
  late final _Cronet_EngineParams_Destroy = _Cronet_EngineParams_DestroyPtr
      .asFunction<void Function(Cronet_EngineParamsPtr)>();

  /// Cronet_EngineParams setters.
  void Cronet_EngineParams_enable_check_result_set(
    Cronet_EngineParamsPtr self,
    bool enable_check_result,
  ) {
    return _Cronet_EngineParams_enable_check_result_set(
      self,
      enable_check_result,
    );
  }

  late final _Cronet_EngineParams_enable_check_result_setPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Cronet_EngineParamsPtr, ffi.Bool)>>(
      'Cronet_EngineParams_enable_check_result_set');
  late final _Cronet_EngineParams_enable_check_result_set =
      _Cronet_EngineParams_enable_check_result_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, bool)>();

  void Cronet_EngineParams_user_agent_set(
    Cronet_EngineParamsPtr self,
    Cronet_String user_agent,
  ) {
    return _Cronet_EngineParams_user_agent_set(
      self,
      user_agent,
    );
  }

  late final _Cronet_EngineParams_user_agent_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              Cronet_String)>>('Cronet_EngineParams_user_agent_set');
  late final _Cronet_EngineParams_user_agent_set =
      _Cronet_EngineParams_user_agent_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, Cronet_String)>();

  void Cronet_EngineParams_accept_language_set(
    Cronet_EngineParamsPtr self,
    Cronet_String accept_language,
  ) {
    return _Cronet_EngineParams_accept_language_set(
      self,
      accept_language,
    );
  }

  late final _Cronet_EngineParams_accept_language_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              Cronet_String)>>('Cronet_EngineParams_accept_language_set');
  late final _Cronet_EngineParams_accept_language_set =
      _Cronet_EngineParams_accept_language_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, Cronet_String)>();

  void Cronet_EngineParams_storage_path_set(
    Cronet_EngineParamsPtr self,
    Cronet_String storage_path,
  ) {
    return _Cronet_EngineParams_storage_path_set(
      self,
      storage_path,
    );
  }

  late final _Cronet_EngineParams_storage_path_setPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(Cronet_EngineParamsPtr,
              Cronet_String)>>('Cronet_EngineParams_storage_path_set');
  late final _Cronet_EngineParams_storage_path_set =
      _Cronet_EngineParams_storage_path_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, Cronet_String)>();

  void Cronet_EngineParams_enable_quic_set(
    Cronet_EngineParamsPtr self,
    bool enable_quic,
  ) {
    return _Cronet_EngineParams_enable_quic_set(
      self,
      enable_quic,
    );
  }

  late final _Cronet_EngineParams_enable_quic_setPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Cronet_EngineParamsPtr, ffi.Bool)>>(
      'Cronet_EngineParams_enable_quic_set');
  late final _Cronet_EngineParams_enable_quic_set =
      _Cronet_EngineParams_enable_quic_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, bool)>();

  void Cronet_EngineParams_enable_http2_set(
    Cronet_EngineParamsPtr self,
    bool enable_http2,
  ) {
    return _Cronet_EngineParams_enable_http2_set(
      self,
      enable_http2,
    );
  }

  late final _Cronet_EngineParams_enable_http2_setPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Cronet_EngineParamsPtr, ffi.Bool)>>(
      'Cronet_EngineParams_enable_http2_set');
  late final _Cronet_EngineParams_enable_http2_set =
      _Cronet_EngineParams_enable_http2_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, bool)>();

  void Cronet_EngineParams_enable_brotli_set(
    Cronet_EngineParamsPtr self,
    bool enable_brotli,
  ) {
    return _Cronet_EngineParams_enable_brotli_set(
      self,
      enable_brotli,
    );
  }

  late final _Cronet_EngineParams_enable_brotli_setPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(Cronet_EngineParamsPtr, ffi.Bool)>>(
      'Cronet_EngineParams_enable_brotli_set');
  late final _Cronet_EngineParams_enable_brotli_set =
      _Cronet_EngineParams_enable_brotli_setPtr.asFunction<
          void Function(Cronet_EngineParamsPtr, bool)>();

  void Cronet_EngineParams_http_cache_mode_set(
    Cronet_EngineParamsPtr self,
    int http_cache_mode,
  ) {
    return _Cronet_EngineParams_http_cache_mode_set(
      self,
      http_cache_mode,
    );
  }
